Visibility Changes + Typos + Small fix